<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_button">SPOTIFY STREAMER</string>
    <string name="scores_button">SCORES APP</string>
    <string name="library_button">LIBRARY APP</string>
    <string name="bib_button">BUILD IT BIGGER</string>
    <string name="xyzreader_button">XYZ READER</string>
    <string name="capstone_button">CAPSTONE: MY OWN APP</string>
    <string name="app_title">My Nanodegree Apps!</string>
</resources>
