<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.portfolio.edison.myappportfolio.MainActivityFragment"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:background="#F6F6F6">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_title"
        android:id="@+id/textViewTitle"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="26sp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="right" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingStart="50dp"
            android:paddingEnd="50dp">

            <android.support.v7.widget.AppCompatButton
                style="@style/MenuButton"
                android:text="@string/spotify_button"
                android:id="@+id/buttonSpotifyStreamer"/>

            <android.support.v7.widget.AppCompatButton
                style="@style/MenuButton"
                android:text="@string/scores_button"
                android:id="@+id/buttonScoresApp" />

            <android.support.v7.widget.AppCompatButton
                style="@style/MenuButton"
                android:text="@string/library_button"
                android:id="@+id/buttonLibraryApp" />

            <android.support.v7.widget.AppCompatButton
                style="@style/MenuButton"
                android:text="@string/bib_button"
                android:id="@+id/buttonBuildItBigger" />

            <android.support.v7.widget.AppCompatButton
                style="@style/MenuButton"
                android:text="@string/xyzreader_button"
                android:id="@+id/buttonXYZReader" />

            <android.support.v7.widget.AppCompatButton
                style="@style/MenuButton"
                android:text="@string/capstone_button"
                android:id="@+id/buttonCapstoneMyapp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
